--- a/css/main.css
+++ b/css/main.css
@@ -2,8 +2,14 @@
    Author's custom styles
    ========================================================================== */
 
-#map-container { height: 180px; }
+/*#map-container { height: 180px; } */
 
+#mapid { height: 180px; }
+
+.item img {
+  max-height: 400px;
+  margin: auto;
+}
 
 
 
